Fixing text alignments

--- a/style.css
+++ b/style.css
@@ -611,7 +611,7 @@ body {
   display: flex;
   flex-direction: column;
   position: relative;
-  padding: 50px 0 30px 0;
+  padding: 50px 5px 30px 5px;
   z-index: 3;
 }
 
@@ -641,9 +641,10 @@ body {
 }
 
 .caption-box p {
-  width: 80%;
+  width: 90%;
   margin: 0 auto;
   font-size: 1.15em;
+  text-align: left;
 }
 
 .max-w-width {
@@ -762,9 +763,9 @@ body {
 .project-summary {
   font-family: "Nourd", sans-serif;
   font-size: 1.15em;
-  text-align: center;
+  text-align: left;
   letter-spacing: 0.2px;
-  margin-top: 10px;
+  margin-top: 15px;
 }
 
 .w-inline-block {
